[package]
name = "advent-of-code-2024"
authors = ["ketrab2004"]
description = "My Advent of Code 2024 solutions."
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
indicatif = "0.17.9"
itertools = "0.13.0"
regex = "1.11.1"
regex-macro = "0.2.0"


[dev-dependencies]
aoc-cli = "0.12.0"

[profile.dev.package.backtrace]
opt-level = 3

