[package]
name = "advent-of-code-2024"
authors = ["ketrab2004"]
description = "My Advent of Code 2024 solutions."
version = "0.1.0"
edition = "2021"

[dependencies]
automod = "1.0.14"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
error-rules = "1.0.1"
indicatif = "0.17.9"
itertools = "0.13.0"
lazy_static = "1.5.0"
priority-queue = "2.1.1"
rayon = "1.10.0"
regex = "1.11.1"
regex-macro = "0.2.0"
trie-rs = "0.4.2"


[dev-dependencies]
aoc-cli = "0.12.0"

[profile.dev.package.backtrace]
opt-level = 3
